--- a/min_compute.yml
+++ b/min_compute.yml
@@ -2,18 +2,18 @@ version: '1.0'
 
 compute_spec:
   cpu:
-    min_cores: 4  # Minimum number of CPU cores
+    min_cores: 8 # Minimum number of CPU cores
     min_speed: 2.5GHz  # Minimum speed per core
     architecture: x86_64  # Architecture type (e.g., x86_64, arm64)
 
   gpu:
     required: true  # Does the application require a GPU?
-    min_vram: 80GB  # Minimum GPU VRAM
+    min_vram: 40G  # Minimum GPU VRAM
     cuda_cores: 1024  # Minimum number of CUDA cores (if applicable)
     min_compute_capability: 6.0  # Minimum CUDA compute capability
 
   memory:
-    min_ram: 64GB  # Minimum RAM
+    min_ram: 48G  # Minimum RAM
     min_swap: 4GB  # Minimum swap space
 
   storage:
